[package]
name = "provnzero-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
futures-util = "0.3"
async-trait = "0.1"

# Encryption
hpke = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# For Ed25519 signatures
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
bytes = "1.11.1"
tower_governor = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "provnzero"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
